[Nikaia Theme] Corrects some display bugs on mobiles & tablets and one in IE.
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@6173 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/Nikaia/css_theme/mobiles.css
+++ b/wims/public_html/themes/Nikaia/css_theme/mobiles.css
@@ -17,6 +17,13 @@
   body div#wimsfrontpage div.wims_frontpage {
     padding: 0;
   }
+  div#wimsfrontpage #wimspagebox div.wimsbody div.wims_widget_box.medium_size {
+    margin:1em auto;
+    width:90%;
+    max-width: 600px;
+    float:none;
+  }
+
   body div#wimsfrontpage div#wimstopbox div#wims_title {
     /*float: none;*/
     padding-left: 0;
@@ -33,8 +40,25 @@
     margin-top:2.5em;
   }
   
+  
+  /*** Styles OEF ****/
+  div.oefform{
+      margin:0 0.5em;
+  }
+  /****************/
+  
+  /** Gros Titres **/
+  body #wimsbodybox #wimspagebox .oeftitle,body #wimsbodybox div.title_box {
+      padding-left:1em;
+      margin:0 -2px;
+      border-radius: 0;
+      margin-bottom:5px;
+  }
+
+  
   div#wimstopbox ul.menuglobal {
     padding:0;
+    text-align: center;
   }
   
   body div#wimstopbox ul.menuglobal li.menuitem, body div#wimstopbox ul.menuglobal li.topmenuitem {
@@ -43,7 +67,7 @@
     -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5)  ;
     -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5)  ;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.5)  ;
-    padding: 5px;
+    padding: 2px 5px 2px 0.5em;
   }
   div#wimsfrontpage div#wimstopbox ul.menuglobal li.menuitem a {
     display: block;
@@ -203,7 +227,9 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    font-size: 50%;
+  }
+  #wimsbodybox div#wimspagebox div.wimsbody table.wimstable td {
+    font-size: 75%;
   }
   #wimsbodybox div#wimspagebox div.wimsbody table.wimstable th {
     margin: 0;
@@ -235,33 +261,33 @@
   #wimsbodybox div#wimspagebox div.wimsbody form input {
     margin: 0 0 10px 10px;
   }
-  #wimsbodybox div#wimspagebox div#menuprof {
+  #wimsbodybox div#menuprof {
     margin-top: 0;
     float: none;
     width: 100%;
     margin-bottom: 10px;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul {
+  #wimsbodybox div#menuprof ul {
     margin: 0;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul.wimsmenu {
+  #wimsbodybox div#menuprof ul.wimsmenu {
     padding: 0;
     border-radius: 0;
     padding-left: 10px;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul.wimsmenu li {
+  #wimsbodybox div#menuprof ul.wimsmenu li {
     display: inline-block;
     border: none;
     background-image: none;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul li.itemsep {
+  #wimsbodybox div#menuprof ul li.itemsep {
     display:block;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul.wimsmenu li a {
+  #wimsbodybox div#menuprof ul.wimsmenu li a {
     background-image: none;
     padding: 0;
   }
-  #wimsbodybox div#wimspagebox div#menuprof ul.wimsmenu li a:after {
+  #wimsbodybox div#menuprof ul.wimsmenu li a:after {
     content: " -";
   }
   /**************BAS DE PAGE MOBILES************/
