--- a/wims/public_html/themes/Nikaia/theme.css
+++ b/wims/public_html/themes/Nikaia/theme.css
@@ -53,6 +53,10 @@
     border: none;
     width: 100%;
   }
+  /* Enleve les bordures sur IE */
+  a img{
+    border:none;
+  }
   body li {
     margin-bottom: 0;
   }
@@ -436,7 +440,7 @@
     background-color: #ffffff;
     /*color: rgba(0, 0, 0, 0.5);*/
     color:#000;
-    text-align: left !important;
+    text-align: center;
     -webkit-border-radius: 0 ;
     -moz-border-radius: 0 ;
     border-radius: 0 ;
@@ -445,7 +449,7 @@
     -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5)  ;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5)  ;
     z-index: 100;
-    padding: 2px 4em;
+    padding: 2px 4px;
   }
   #wimstopbox ul.menuglobal li {
     background-repeat: no-repeat;
@@ -609,9 +613,8 @@
     margin: 0 -10px;
     margin-bottom: 10px;
     color: #ffffff;
-    padding: 12px 0;
+    padding: 12px 5px 12px 0.5em;
     text-align: left;
-    padding-left: 5px;
     font-size: 1.2em;
     text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.5);
   }
@@ -758,7 +761,7 @@
     border-radius: 5px 5px 0 0 ;
   }
   #wimsbodybox #wimspagebox div.wimsbody table.wimstable td {
-    text-align: left !important;
+    text-align: left;
   }
   #wimsbodybox #wimspagebox div.wimsbody table.wimstable td.wims_fname {
     color: #000000;
